--- a/client/.env
+++ b/client/.env
@@ -4,8 +4,9 @@
 
 #Markdown upload
 #"https://blog-server-6lno.onrender.com/"
-VITE_YOUR_MK_UPLOA_URL="https://blog-server-6lno.onrender.com/"
-VITE_YOUR_API_URL='https://blog-server-6lno.onrender.com/'
+#""
+VITE_YOUR_MK_UPLOA_URL="http://http://localhost:3000/"
+VITE_YOUR_API_URL='http://localhost:3000/'
 
 #update avatar Url
-VITE_YOUR_AVATAR_DEFAULT_URL='https://blog-server-6lno.onrender.com/'
+VITE_YOUR_AVATAR_DEFAULT_URL='http://localhost:3000/upload/avatar/defaultUser.jpg'
