--- a/client/.env
+++ b/client/.env
@@ -5,8 +5,8 @@
 #Markdown upload
 #"https://blog-server-6lno.onrender.com/"
 #"http://localhost:3000/"
-VITE_YOUR_MK_UPLOA_URL="http://localhost:3000/"
-VITE_YOUR_API_URL='http://localhost:3000/'
+VITE_YOUR_MK_UPLOA_URL="https://blog-server-6lno.onrender.com/"
+VITE_YOUR_API_URL='https://blog-server-6lno.onrender.com/'
 
 #update avatar Url
-VITE_YOUR_AVATAR_DEFAULT_URL='http://localhost:3000/upload/avatar/defaultUser.jpg'
+VITE_YOUR_AVATAR_DEFAULT_URL='https://blog-server-6lno.onrender.com/upload/avatar/defaultUser.jpg'
